BugFix : icon before title was not correctly aligned

--- a/jBakeSite/assets/org_openCiLife_ecoWeb/css/base.css
+++ b/jBakeSite/assets/org_openCiLife_ecoWeb/css/base.css
@@ -100,6 +100,11 @@ h1, h2, h3, h4, h5, h6, h7, h8, h9, h10{
       vertical-align: -0.125em;
 }
 
+.widget_title_image {
+	float:left;
+	margin-top:28px !important;
+}
+
 .blockContent {
 	padding: 0px 2%;
 	width: 100%;
